api-six-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apisix-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  tls:
    - hosts:
      - apisix-admin.lafia.io
      - apisix-gateway.lafia.io
      secretName: apisix-prod
  rules:
  - host: "apisix-gateway.lafia.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apisix-admin
            port:
              number: 9180
  - host: "apisix-admin.lafia.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apisix-dashboard
            port:
              number: 80
